# weibo-crawler-next

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: release.yml
.github/workflows-pending/: ci.yml  release.yml
backend/: __init__.py  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  main.py
backend/app/anti_ban/: __init__.py  captcha_detector.py  cookie_pool.py  factory.py  proxy_pool.py  rate_limiter.py  retry.py  ua_pool.py
backend/app/config/: __init__.py  loader.py  schema.py  settings.py
backend/app/crawler/: __init__.py  api_endpoints.py  client.py  headers.py  parser.py  rate_limiter.py
backend/app/db/: __init__.py  base.py  fts.py  models.py  session.py
backend/app/exporters/: __init__.py  base.py  csv_exporter.py  json_exporter.py  mongodb_exporter.py  mysql_exporter.py  registry.py  sqlite_exporter.py  (+1 more)
cli/: __init__.py  __main__.py  commands.py
cli/tui/: __init__.py  app.py  theme.py  user_list_store.py
deploy/systemd/: wcn-api.service
docs/: ANTI_BAN.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
docs/progress/: loop-plan-组1-final.md  loop-plan-组1.md  修改记录_2026-05-21.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.js  main.tsx  router.js  router.tsx
tests/: conftest.py  test_anti_ban.py  test_anti_ban_factory.py  test_audit_fixes.py  test_config_models.py  test_exporters.py  test_parser.py  test_security_v07.py  test_tui_smoke.py  test_user_list_editor.py  test_user_list_store.py  test_weibo_service_pagination.py
tests/integration/: __init__.py  conftest.py  test_full_crawl_flow.py  test_pagination_safety.py
(+85 files in other folders)
