[project]
name = "weibo-crawler-next"
version = "0.2.0.0"
description = "现代化微博数据采集与分析平台 — CLI + WebUI 双模式 / 高阶风控 / 插件化导出"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "FruityMaxine", email = "donaldholmestte@gmail.com" }]
requires-python = ">=3.12"
keywords = ["weibo", "crawler", "scraper", "social-media", "data-collection", "fastapi", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.4",
    "click>=8.1.7",
    "rich>=13.9.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.2",
    "websockets>=13.0",
]

[project.optional-dependencies]
mysql = ["aiomysql>=0.2.0", "pymysql>=1.1.0"]
postgres = ["asyncpg>=0.30.0", "psycopg2-binary>=2.9.10"]
mongo = ["motor>=3.6.0", "pymongo>=4.10.0"]
tui = ["textual>=0.86.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[project.scripts]
wcn = "cli.__main__:main"
weibo-crawler-next = "cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "SIM", "ARG"]
ignore = ["S101", "S105", "S107", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
